Update website pages